--- a/.github/workflows/output.yaml
+++ b/.github/workflows/output.yaml
@@ -5,4 +5,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: echo event details
-        run: echo "${{ toJSON(github.events) }}"
+        run: echo "${{ toJSON(github.event) }}"
